tests/ui/generator/issue-57478.no_drop_tracking.stderr
error: generator cannot be sent between threads safely
  --> $DIR/issue-57478.rs:13:17
   |
LL |       assert_send(|| {
   |  _________________^
LL | |
LL | |         let guard = Foo;
LL | |         drop(guard);
LL | |         yield;
LL | |     })
   | |_____^ generator is not `Send`
   |
   = help: within `[generator@$DIR/issue-57478.rs:13:17: 13:19]`, the trait `Send` is not implemented for `Foo`
note: generator is not `Send` as this value is used across a yield
  --> $DIR/issue-57478.rs:17:9
   |
LL |         let guard = Foo;
   |             ----- has type `Foo` which is not `Send`
LL |         drop(guard);
LL |         yield;
   |         ^^^^^ yield occurs here, with `guard` maybe used later
LL |     })
   |     - `guard` is later dropped here
note: required by a bound in `assert_send`
  --> $DIR/issue-57478.rs:21:19
   |
LL | fn assert_send<T: Send>(_: T) {}
   |                   ^^^^ required by this bound in `assert_send`

error: aborting due to previous error

